Refactor formatting and optimize imports in MancalaIndexGenerator class